ulib: make APIs in `axstd` more similar to rust std
- now apps can be built with both std and ArceOS without modification

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ sched_cfs = ["axtask/sched_cfs", "irq"]
 
 # File system
 fs = ["alloc", "axruntime/fs", "dep:axdriver", "dep:axfs"]
+myfs = ["axfs?/myfs"]
 use-ramdisk = ["axdriver?/ramdisk", "axfs?/use-ramdisk"]
 
 # Networking
