feat: 添加了task spawn 测例内容

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ repository = "https://github.com/rcore-os/arceos/tree/main/ulib/axstd"
 documentation = "https://rcore-os.github.io/arceos/axstd/index.html"
 
 [features]
-default = []
+default = ["fs", "alloc"]
 
 # Multicore
 smp = ["axfeat/smp", "spinlock/smp"]
