feat: add ext4 feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,8 @@ sched_cfs = ["axfeat/sched_cfs", "arch_boot/preempt"]
 # File system
 fs = ["arceos_api/fs", "axfeat/fs"]
 myfs = ["arceos_api/myfs", "axfeat/myfs"]
+fatfs = ["axfeat/fatfs"]
+ext4fs = ["axfeat/ext4fs", "fs"]
 
 # Networking
 net = ["arceos_api/net", "axfeat/net"]
