add Starry keyword

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ license = "GPL-3.0-or-later OR Apache-2.0"
 homepage = "https://github.com/rcore-os/arceos"
 repository = "https://github.com/rcore-os/arceos/tree/main/ulib/axstd"
 documentation = "https://rcore-os.github.io/arceos/axstd/index.html"
+keywords = ["Starry"]
 
 [features]
 default = []
