--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,9 +72,9 @@ log-level-debug = ["axfeat/log-level-debug"]
 log-level-trace = ["axfeat/log-level-trace"]
 
 [dependencies]
-axfeat = { git = "https://github.com/Starry-OS/axfeat.git" }
-arceos_api = { git = "https://github.com/Starry-OS/arceos_api.git" }
+axfeat = { git = "https://github.com/Josen-B/axfeat.git" }
+arceos_api = { git = "https://github.com/Josen-B/arceos_api.git" }
 axio = { git = "https://github.com/Starry-OS/axio.git" }
 axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
-spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
-arch_boot = { git = "https://github.com/Starry-OS/arch_boot.git" }
+spinlock = { git = "https://github.com/Josen-B/spinlock.git" }
+arch_boot = { git = "https://github.com/Josen-B/arch_boot.git" }
